--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,16 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
+
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
+
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
     implementation "org.androidannotations:androidannotations-api:$AAVersion"
+    annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
+
+    testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
