--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".SelectPaymentActivity_" />
         <activity android:name=".EWalletMethodActivity_" />
-        <activity android:name=".CardMethodActivity"></activity>
+        <activity android:name=".Activity.CardMethodActivity"></activity>
     </application>
 
 </manifest>
