--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity_">
+        <activity android:name=".activity.MainActivity_">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SelectPaymentActivity_" />
-        <activity android:name=".EWalletMethodActivity_" />
-        <activity android:name=".Activity.CardMethodActivity"></activity>
+        <activity android:name=".activity.SelectPaymentActivity_" />
+        <activity android:name=".activity.CardMethodActivity_"/>
     </application>
 
 </manifest>
