--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
 
     implementation "org.androidannotations:androidannotations-api:$AAVersion"
+    implementation 'com.android.support:design:26.1.0'
     annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
 
     testImplementation 'junit:junit:4.12'
@@ -38,4 +39,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation files('libs/SDK4BaseBinderV1.4.1.jar')
     implementation files('libs/SDK4EmvBinderV1.3.1.jar')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    compile "com.squareup.retrofit2:converter-moshi:2.0.0"
 }
+
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
