--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".activity.SelectPaymentActivity_" />
         <activity android:name=".activity.CardMethodActivity_" />
-        <activity android:name=".activity.EwalletMethodActivity"></activity>
+        <activity android:name=".activity.EwalletMethodActivity_"></activity>
     </application>
 
 </manifest>
