--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,15 @@ dependencies {
     implementation files('libs/SDK4EmvBinderV1.3.1.jar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
-    compile "com.squareup.retrofit2:converter-moshi:2.0.0"
+
+    // RxJava & RxAndroid
+    compile 'io.reactivex:rxjava:1.1.3'
+    compile 'io.reactivex:rxandroid:1.1.0'
+
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+
 }
 
 apply plugin: 'kotlin-android'
