add products catalog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:name=".Activity.LoginActivity"
             android:label="@string/title_activity_login">
+
+        </activity>
+        <activity android:name=".Activity.CatalogActivity"
+            android:theme="@style/AppTheme"
+            android:label="Products Catalog">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
