--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,15 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.3'
     compile 'io.reactivex:rxandroid:1.1.0'
 
+    //card view
+    compile 'com.android.support:cardview-v7:26.1.0'
+
+    //picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
 
 
 }
