--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,20 +11,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
         <activity
-            android:theme="@style/AppTheme.NoActionBar"
             android:name=".Activity.LoginActivity"
-            android:label="@string/title_activity_login">
-
-        </activity>
-        <activity android:name=".Activity.CatalogActivity"
-            android:theme="@style/AppTheme"
-            android:label="Products Catalog">
+            android:label="@string/title_activity_login"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Activity.CatalogActivity"
+            android:label="Products Catalog"
+            android:theme="@style/AppTheme">
+        </activity>
+        <activity android:name=".Activity.CartActivity"
+            android:label="Cart"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
