--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,7 @@ dependencies {
 
     implementation 'io.realm:android-adapters:2.1.1'
 
+    implementation 'com.airbnb.android:lottie:2.2.5'
+
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
