--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,18 +30,23 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'org.greenrobot:eventbus:3.1.1'
-    implementation 'com.github.kenglxn.QRGen:android:2.3.0'
     implementation "org.androidannotations:androidannotations-api:$AAVersion"
     implementation 'com.android.support:design:26.1.0'
     kapt "org.androidannotations:androidannotations:$AAVersion"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    // Wangpos SDK
     implementation files('libs/SDK4BaseBinderV1.4.1.jar')
     implementation files('libs/SDK4EmvBinderV1.3.1.jar')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    // EventBus
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
+    // QR Generator
+    implementation 'com.github.kenglxn.QRGen:android:2.3.0'
 
     // RxJava & RxAndroid
     compile 'io.reactivex:rxjava:1.1.3'
@@ -53,16 +58,20 @@ dependencies {
     //picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
 
+    // Parceler
     kapt "org.parceler:parceler:$ParcelerVersion"
     implementation "org.parceler:parceler-api:$ParcelerVersion"
 
-    implementation "org.jetbrains.anko:anko-commons:$anko_version"
-
+    // Realm Adapter
     implementation 'io.realm:android-adapters:2.1.1'
 
+    // Lottie for animation
     implementation 'com.airbnb.android:lottie:2.2.5'
 
+    // Barcode scanner
     implementation 'me.dm7.barcodescanner:zbar:1.9.8'
 
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
